Dark mode color fix for Configuration #1567

--- a/dsmr_frontend/static/dsmr_frontend/css/dsmr-reader/dark.css
+++ b/dsmr_frontend/static/dsmr_frontend/css/dsmr-reader/dark.css
@@ -99,3 +99,10 @@ html body.dark-mode {
 .dark-mode .datepicker-trigger.st-gray {
     background-color: var(--dark-table-background);
 }
+
+/**
+* Configuration
+*/
+.dark-mode div.content > div.title {
+    color: #FFF !important;
+}
